ONUG/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: firewall-content-policy
  namespace: firewall
spec:
  podSelector:
    matchLabels:
      app: firewall-content
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: firewall
    - namespaceSelector:
        matchLabels:
          purpose: expressroute
      podSelector:
        matchLabels:
          status: exception
